# crd13-new-version

./: .gitattributes  .gitignore  README.md  corpus_attestation_template_analysis.md
.kitconc_crd13_sources/: corpus_manifest.json
new-backend/: README.md  notes.md  pyproject.toml
new-backend/app/: main.py  test.py
new-backend/app/assets/.obsidian/: workspace.json
new-backend/app/assets/agents/: attestation_analyser.md  attestation_rewriter.md  attestation_template_adapter.md  commodities_identifier.md  compliance_analyser.md  compliance_corrector.md  provision_filter.md  template.md  triple_generator.md  unitizer.md
new-backend/app/assets/indexes/: provisions.sqlite3  provisions_units.sqlite3
new-backend/app/assets/instructions/: attestation_rewriter.md  commodities_identifier.md  evaluator.md  provision_filter.md  provisions_filter.md  template.md  translator.md  writer.md
new-backend/app/orchestration/: config.py  gpt.py  gpt_agent.py  gpt_agent_local.py  gpt_local.py  gpt_sandbox_agent.py  util.py
new-backend/app/prepare/: build_documents_resource.py  build_provisions_sqlite.py  build_provisions_vector_index.py  build_sentences_resource.py  index_provisions.py  unitization.py
new-backend/app/raw/: undefined_sentences.txt
new-backend/app/tests/: test_commodities_identification.py  test_unitization.py
new-backend/app/tools/: attestation_analyser.py  attestation_rewriter.py  attestation_template_adaptation.py  commodities_identification.py  compliance_analysis.py  compliance_correction.py  provisions_search.py  triple_generation.py  unitization.py
(+960 files in other folders)
