[project]
name = "new-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "openai-agents>=0.17.6",
    "pypdf2==3.0.1",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sentence-transformers>=3.0,<6.0",
    "spacy>=3.8.14",
    "sqlite-vec>=0.1.9",
    "torch>=2.3,<2.12",
    "transformers>=5.12.1",
    "uvicorn[standard]>=0.49.0",
]
